# py2exestub

./: .gitignore  audit_wheel.py  get_externals.bat  meson.build  pyproject.toml
.github/workflows/: python-publish.yml  python.yml
pcbuild/: _resourceediting.c  _resourceediting.vcxproj  _resourceediting.vcxproj.filters  common.props  cpython.props  embed.c  embed.rc  embed.vcxproj  embed.vcxproj.filters  pcbuild.sln  resource.h  stub.c  stub.rc  stub.vcxproj  stub.vcxproj.filters
src/py2exestub/: DistBuilder.py  Program.manifest  __main__.py  _resourceediting.c  embed.c  embed.rc  resource.h  stub.c  stub.rc  zipextimporter.py
