[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[tool.meson-python]
limited-api = true

[project]
name = "py2exestub"
version = "0.1.0"
description = "Embeds Python 3.12+ projects into a single stand alone exe which is actually implemented like an SFX exe."
requires-python = ">=3.12"
authors = [
    { name = "AraHaan" }
]
dependencies = [
    "uv"
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: Microsoft :: Windows",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
